--- a/2.godina/1.semestar/OOP1/Labovi/Lab3/Lab3_V2/Lab3_V2/Lab3_V2.vcxproj
+++ b/2.godina/1.semestar/OOP1/Labovi/Lab3/Lab3_V2/Lab3_V2/Lab3_V2.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="posiljka.cpp" />
     <ClCompile Include="prodavac.cpp" />
+    <ClCompile Include="rukovalac.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
