--- a/2.godina/1.semestar/OOP1/Labovi/Lab3/Lab3_V2/Lab3_V2/Lab3_V2.vcxproj.filters
+++ b/2.godina/1.semestar/OOP1/Labovi/Lab3/Lab3_V2/Lab3_V2/Lab3_V2.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="prodavac.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rukovalac.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
