--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@
 /3.godina/1.semestar/IS1/Projekat/Klijent/nbproject/private/
 /3.godina/1.semestar/IS1/Projekat/Klijent/build/
 /3.godina/1.semestar/IS1/Projekat/Klijent/target/
+/3.godina/1.semestar/IS1/Projekat/Podsistem2/nbproject/private/
+/3.godina/1.semestar/IS1/Projekat/Podsistem2/build/
+/3.godina/1.semestar/IS1/Projekat/Podsistem2/dist/
