--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /3.godina/1.semestar/IS1/Projekat/Podsistem2/nbproject/private/
 /3.godina/1.semestar/IS1/Projekat/Podsistem2/build/
 /3.godina/1.semestar/IS1/Projekat/Podsistem2/dist/
+/3.godina/1.semestar/IS1/Projekat/Podsistem3/nbproject/private/
+/3.godina/1.semestar/IS1/Projekat/Podsistem3/dist/
+/3.godina/1.semestar/IS1/Projekat/Podsistem3/build/
