--- a/3.godina/1.semestar/IS1/Projekat/Podsistem3/nbproject/project.properties
+++ b/3.godina/1.semestar/IS1/Projekat/Podsistem3/nbproject/project.properties
@@ -37,10 +37,10 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
-jar.name=Podsistem2.jar
+jar.name=Podsistem3.jar
 javac.classpath=\
-    ${libs.eclipselink.classpath}:\
-    ${libs.javaee-api-8.0.classpath}
+    ${libs.javaee-api-8.0.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -64,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=podsistem2.Main
+main.class=podsistem3.Main
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
