resource local sad, prepraviti cuvanja

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@
 /3.godina/1.semestar/IS1/Projekat/Podsistem3/nbproject/private/
 /3.godina/1.semestar/IS1/Projekat/Podsistem3/dist/
 /3.godina/1.semestar/IS1/Projekat/Podsistem3/build/
+/3.godina/1.semestar/IS1/Projekat/ApplicationClient2/nbproject/private/
