--- a/3.godina/1.semestar/IS1/Projekat/ApplicationClient1/nbproject/project.properties
+++ b/3.godina/1.semestar/IS1/Projekat/ApplicationClient1/nbproject/project.properties
@@ -24,9 +24,7 @@ dist.dir=dist
 dist.ear.jar=${dist.dir}/${jar.name}
 dist.jar=${dist.dir}/${jar.name}
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jelena\\Desktop\\mysql-connector-java-8.0.22\\mysql-connector-java-8.0.22.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=1.8
@@ -38,11 +36,9 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv5ee8
 jar.compress=false
-jar.name=Podsistem3.jar
+jar.name=ApplicationClient1.jar
 javac.classpath=\
-    ${libs.javaee-api-8.0.classpath}:\
-    ${libs.eclipselink.classpath}:\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=podsistem3.Main
+main.class=applicationclient1.Main
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
