--- a/3.godina/1.semestar/IS1/Projekat/Podsistem1/nbproject/project.properties
+++ b/3.godina/1.semestar/IS1/Projekat/Podsistem1/nbproject/project.properties
@@ -26,10 +26,11 @@ dist.jar=${dist.dir}/${jar.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-8.0.22.jar=C:\\Users\\Jelena\\Desktop\\mysql-connector-java-8.0.22\\mysql-connector-java-8.0.22.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=1.8
-j2ee.platform.classpath=
+j2ee.platform.classpath=${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/cdi-api.jar:${j2ee.server.home}/modules/endorsed/grizzly-npn-bootstrap.jar:${j2ee.server.home}/modules/endorsed/jakarta.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jakarta.xml.bind-api.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
 j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar
@@ -40,7 +41,8 @@ jar.compress=false
 jar.name=Podsistem1.jar
 javac.classpath=\
     ${libs.eclipselink.classpath}:\
-    ${libs.javaee-api-8.0.classpath}
+    ${libs.javaee-api-8.0.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.22.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
