--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@
 /3.godina/1.semestar/IS1/Projekat/Podsistem3/dist/
 /3.godina/1.semestar/IS1/Projekat/Podsistem3/build/
 /3.godina/1.semestar/IS1/Projekat/ApplicationClient2/nbproject/private/
+/3.godina/1.semestar/IS1/lab2test/lab2/target/
